# litendb

./: .gitattributes  .gitmodules  README.md  TODO  Tasks.md  buildvm.sh
cpp/: CMakeLists.txt  Doxyfile  buildall.sh
cpp/BuildUtils/: BuildUtils.cmake
cpp/benchmarks/: README.md
cpp/build_defs/: CMakeBuildDefs.txt
cpp/build_utils/: BuildUtils.cmake
cpp/cache/: CMakeLists.txt  TBlock.cpp  TBlock.h  TCache.cpp  TCache.h  TCacheTypes.h  TCatalog.cpp  TCatalog.h  TColumn.cpp  TColumn.h  TColumnMap.cpp  TColumnMap.h  TRowBlock.cpp  TRowBlock.h  TSchema.cpp  TSchema.h  TTable.cpp  TTable.h  cache.h  cache_fwd.h
cpp/cache_test/: CMakeLists.txt  TestMain.cpp  TestUtils.cpp  TpchDemo.cpp  TpchDemo.h
cpp/cmake_modules/: BuildUtils.cmake  FindPython3Alt.cmake  UseCython.cmake
cpp/common/: CMakeLists.txt  Macros.h  Status.cpp  Status.h  StopWatch.h  StringBuilder.h  TConfigs.cpp  TConfigs.h  TFuncUtils.h  TGuid.cpp  TGuid.h  THashFuncs.h  TJSon.h  TLog.cpp  TLog.h  TMacros.h  TResult.cpp  TResult.h  TService.cpp  TService.h  TStatus.cpp  TStatus.h  TStopWatch.h  TStringBuilder.h  TTaskScheduler.cpp  TTaskScheduler.h  TTimeUtils.cpp  TTimeUtils.h  Tguid.cpp  Tguid.h  TimeUtils.cpp  TimeUtils.h  Tuuid.cpp  Tuuid.h  common.h
cpp/docs/html/: TBlock_8cpp.html  TBlock_8cpp__incl.map  TBlock_8cpp__incl.md5  TBlock_8h.html  TBlock_8h__dep__incl.map  TBlock_8h__dep__incl.md5  TBlock_8h__incl.map  TBlock_8h__incl.md5  TBlock_8h_source.html  TCacheTypes_8h.html  TCacheTypes_8h__dep__incl.map  TCacheTypes_8h__dep__incl.md5  TCacheTypes_8h_source.html  TCache_8cpp.html  TCache_8cpp__incl.map  TCache_8cpp__incl.md5  TCache_8h.html  TCache_8h__dep__incl.map  TCache_8h__dep__incl.md5  TCache_8h__incl.map  TCache_8h__incl.md5  TCache_8h_source.html  TCatalog_8cpp.html  TCatalog_8cpp__incl.map  TCatalog_8cpp__incl.md5  TCatalog_8h.html  TCatalog_8h__dep__incl.map  TCatalog_8h__dep__incl.md5  TCatalog_8h__incl.map  TCatalog_8h__incl.md5  TCatalog_8h_source.html  TColumnMap_8cpp.html  TColumnMap_8cpp__incl.map  TColumnMap_8cpp__incl.md5  TColumnMap_8h.html  TColumnMap_8h__dep__incl.map  TColumnMap_8h__dep__incl.md5  TColumnMap_8h__incl.map  TColumnMap_8h__incl.md5  TColumnMap_8h_source.html  (+411 more)
cpp/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+45 more)
cpp/dtensor/: CMakeLists.txt  DataTensor.h  Status.cpp  Status.h  StringBuilder.h  TArrayMap.cpp  TArrayMap.h  TBlock.h  TCache.cpp  TCache.h  TCatalog.cpp  TCatalog.h  TColumn.cpp  TColumn.h  TColumnChunk.cpp  TColumnChunk.h  TColumnIterator.h  TColumnMap.cpp  TColumnMap.h  TCoreTypes.h  TRowBlock.h  TTable.cpp  TTable.h  TestMain.cpp  dtensor.h  dtensor_capi.cpp  dtensor_capi.h  macros.h
cpp/dtensor_test/: CMakeLists.txt  TestMain.cpp  TestUtils.cpp  TpchDemo.cpp  TpchDemo.h  TpchQ6Q5.cpp  TpchQ6Q5.h  TpchQueries.cpp  TpchQueries.h
cpp/external_libs/: buildall.sh  buildarrow.sh
cpp/external_libs/arrow/: build.sh
cpp/external_libs/boost/: build.sh  buildall.sh
cpp/external_libs/double-conversion/: build.sh
cpp/external_libs/folly/: build.sh
cpp/external_libs/glog/: build.sh
cpp/external_libs/googletest/: build.sh
cpp/external_libs/libevent/: build.sh
cpp/external_libs/libfmt/: build.sh
cpp/external_libs/nlohmann/: build.sh
cpp/external_libs/poco/: build.sh
cpp/external_libs/ray/: build.sh
cpp/external_libs/re2/: build.sh
cpp/external_libs/tbb/: build.sh
cpp/external_libs/velox/: build.sh
cpp/nvec/: CMakeLists.txt
cpp/nvec/src/: TestMain.cpp
cpp/opensource/: buildall.sh
data/tpch/sfdot001g/: customer.tbl  lineitem.tbl  orders.tbl  supplier.tbl
docs/: Build.md  Techdocs.md  Velox - LinkedIn Presentation.pptx  sw-arch.pptx
jvm/litendb/: buildall.sh  pom.xml
jvm/spark/sql/: tpch-queries.ipynb
py/: README.md  arrow_tutorials.ipynb  environment.yml
py/liten/: CMakeLists.txt  README.md  build.sh  setup.py
py/liten/liten/: __init__.py  _liten.pxd  _liten.pyx  cache.py  codex.py  database.py  lib.pxd  lib.pyx  litenutils.py  openai.py  rcliten.py  schema.py  service.py  session.py  tcache.pxd  tcache.pxi  tcache.pyx  tschema.pxd  tschema.pxi  tschema.pyx  tservice.pxi  ttable.pxd  ttable.pxi  ttable.pyx  utils.py  work.py
py/liten/litendb/: cache.py  lib.pyx  tcache.pxi  tcache.pxi~  tschema.pxi  tschema.pxi~  tservice.pxi  ttable.pxi  version.py
py/liten/tendb/: __init__.py  lib.pyx  ttable.pxi
py/notebooks/: ArrowTutorial.ipynb  ArrowTutorial_Complete.ipynb  Examples.ipynb  InstallPackages.ipynb  LitenBasicSentimentAnalysis.ipynb  LitenIntro.ipynb  LitenIntro_0.ipynb  LitenIntro_1.ipynb  LitenIntro_2.ipynb  LitenIntro_InProgress.ipynb  LitenNYTaxiSQLXGBoost.ipynb  LitenNYTaxiXGBoost.ipynb  LitenPCapIPPktAnalyzer.ipynb  LitenRaySingleActorQ5Q6.ipynb  LitenStandaloneQ5Q6.ipynb  LitenTpchQ5Q6.ipynb  NYTaxiPandasXGBoost.ipynb  RayTutorial.ipynb  SparkTpchQueries.ipynb  TenalyticsIntro.ipynb  WebLogAnalytics.ipynb  arrow_tutorial.ipynb  my_data.json  nyc-taxi-fare-xgboost.ipynb  orders.csv  spark.sh
py/notebooks/demos/: LitenRaySingleActorQ5Q6.ipynb  LitenStandaloneQ5Q6.ipynb  LitenTpchQ5Q6.ipynb  SparkTpchQueries.ipynb
py/pytendb/: setup.py
py/tendb/: CMakeLists.txt  README.md  setup.py
py/wheels/: liten-0.0.6-cp38-cp38-linux_x86_64.whl  liten-0.0.7-cp38-cp38-linux_x86_64.whl
setup/: Dockerfile  README.md  buildvm.sh  entrypoint.sh  requirements.txt
setup/docker/: .env  Dockerfile  build-docker-image.sh  dashboard-admin.yaml  docker-compose-bitnami.yml  docker-compose-pyspark.yml  docker-compose.yml  driver.yml  k8s_pyspark.yaml  requirements.txt  run_docker_spark.sh
setup/k8s/: k8s_deploy.yaml  k8s_spark.yaml  start_kube.sh
(+28 files in other folders)
